[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/graphics/backgrounds/tileable_menu_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/sprites/default1.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/sprites/default0.png" type="Texture" id=3]
[ext_resource path="res://assets/scripts/character_stats.gd" type="Script" id=4]
[ext_resource path="res://assets/graphics/abilities/bash.png" type="Texture" id=5]

[sub_resource type="AnimatedTexture" id=1]
frames = 2
fps = 1.0
frame_0/texture = ExtResource( 3 )
frame_1/texture = ExtResource( 2 )
frame_1/delay_sec = 0.0

[node name="CharStats" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="NinePatchRect" parent="."]
margin_right = 444.0
margin_bottom = 444.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharSprite" type="TextureRect" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 237.0
margin_bottom = 237.0
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityIcons" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 239.0
margin_right = 149.0
margin_bottom = 390.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability1" type="TextureRect" parent="AbilityIcons"]
margin_right = 99.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[node name="Ability2" type="TextureRect" parent="AbilityIcons"]
margin_top = 36.0
margin_right = 99.0
margin_bottom = 68.0
texture = ExtResource( 5 )

[node name="Ability3" type="TextureRect" parent="AbilityIcons"]
margin_top = 72.0
margin_right = 99.0
margin_bottom = 104.0
texture = ExtResource( 5 )

[node name="Abilities" type="VBoxContainer" parent="."]
margin_left = 170.0
margin_top = 239.0
margin_right = 223.0
margin_bottom = 395.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability1" type="Label" parent="Abilities"]
margin_right = 53.0
margin_bottom = 14.0

[node name="Ability2" type="Label" parent="Abilities"]
margin_top = 18.0
margin_right = 53.0
margin_bottom = 32.0

[node name="Ability3" type="Label" parent="Abilities"]
margin_top = 36.0
margin_right = 53.0
margin_bottom = 50.0

[node name="Stats" type="VBoxContainer" parent="."]
margin_left = 250.0
margin_top = 40.5
margin_right = 290.0
margin_bottom = 211.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitPoints" type="Label" parent="Stats"]
margin_right = 40.0
margin_bottom = 31.0
text = "HP: 
"

[node name="Attack" type="Label" parent="Stats"]
margin_top = 35.0
margin_right = 40.0
margin_bottom = 66.0
text = "ATK:
"

[node name="Defense" type="Label" parent="Stats"]
margin_top = 70.0
margin_right = 40.0
margin_bottom = 101.0
text = "DEF:
"

[node name="Speed" type="Label" parent="Stats"]
margin_top = 105.0
margin_right = 40.0
margin_bottom = 136.0
text = "SPD:
"

[node name="Movement" type="Label" parent="Stats"]
margin_top = 140.0
margin_right = 40.0
margin_bottom = 154.0
text = "MOV:"
